--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: routing_client_dart
 description: Dart Package for Routing Client Api ( support OSRM project )
-version: 0.5.2
-homepage: https://github.com/liodali/OSM-Routing-Client-Dart
+version: 0.5.2-wanleung
+homepage: https://github.com/wanleung/OSM-Routing-Client-Dart
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
